feat(timeline): filter grumbles by user
